--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 FS22_BOT_DB_PATH=./db.json
 FS22_BOT_DISABLE_CERTIFICATE_VERIFICATION=false
+FS22_BOT_DISABLE_SAVEGAME_MESSAGES=false
 FS22_BOT_DISABLE_UNREACHABLE_FOUND_MESSAGES=false
 FS22_BOT_DISCORD_CHANNEL_NAME=
 FS22_BOT_DISCORD_SERVER_NAME=
