--- a/.env
+++ b/.env
@@ -1,18 +1,18 @@
-FS22_BOT_DB_PATH=./db.json
-FS22_BOT_DISABLE_CERTIFICATE_VERIFICATION=false
-FS22_BOT_DISABLE_SAVEGAME_MESSAGES=false
-FS22_BOT_DISABLE_UNREACHABLE_FOUND_MESSAGES=false
-FS22_BOT_DISCORD_CHANNEL_NAME=
-FS22_BOT_DISCORD_SERVER_NAME=
-FS22_BOT_DISCORD_TOKEN=YOUR_DISCORD_TOKEN
-FS22_BOT_FETCH_RETRIES=5
-FS22_BOT_FETCH_RETRY_DELAY_MS=2000
-FS22_BOT_POLL_INTERVAL_MINUTES=1
-FS22_BOT_PURGE_DISCORD_CHANNEL_AFTER_DAYS=7
-FS22_BOT_PURGE_DISCORD_CHANNEL_AFTER_LINES=
-FS22_BOT_PURGE_DISCORD_CHANNEL_HOUR=2
-FS22_BOT_PURGE_DISCORD_CHANNEL_NAME=
-FS22_BOT_PURGE_DISCORD_CHANNEL_ON_STARTUP=false
-FS22_BOT_PURGE_DISCORD_CHANNEL_SERVER_NAME=
-FS22_BOT_URL_CAREER_SAVEGAME=http://localhost:8080/feed/dedicated-server-savegame.html
-FS22_BOT_URL_SERVER_STATS=http://localhost:8080/feed/dedicated-server-stats.xml
+FARMING_SIMULATOR_BOT_DB_PATH=./db.json
+FARMING_SIMULATOR_BOT_DISABLE_CERTIFICATE_VERIFICATION=false
+FARMING_SIMULATOR_BOT_DISABLE_SAVEGAME_MESSAGES=false
+FARMING_SIMULATOR_BOT_DISABLE_UNREACHABLE_FOUND_MESSAGES=false
+FARMING_SIMULATOR_BOT_DISCORD_CHANNEL_NAME=
+FARMING_SIMULATOR_BOT_DISCORD_SERVER_NAME=
+FARMING_SIMULATOR_BOT_DISCORD_TOKEN=YOUR_DISCORD_TOKEN
+FARMING_SIMULATOR_BOT_FETCH_RETRIES=5
+FARMING_SIMULATOR_BOT_FETCH_RETRY_DELAY_MS=2000
+FARMING_SIMULATOR_BOT_POLL_INTERVAL_MINUTES=1
+FARMING_SIMULATOR_BOT_PURGE_DISCORD_CHANNEL_AFTER_DAYS=7
+FARMING_SIMULATOR_BOT_PURGE_DISCORD_CHANNEL_AFTER_LINES=
+FARMING_SIMULATOR_BOT_PURGE_DISCORD_CHANNEL_HOUR=2
+FARMING_SIMULATOR_BOT_PURGE_DISCORD_CHANNEL_NAME=
+FARMING_SIMULATOR_BOT_PURGE_DISCORD_CHANNEL_ON_STARTUP=false
+FARMING_SIMULATOR_BOT_PURGE_DISCORD_CHANNEL_SERVER_NAME=
+FARMING_SIMULATOR_BOT_URL_CAREER_SAVEGAME=http://localhost:8080/feed/dedicated-server-savegame.html
+FARMING_SIMULATOR_BOT_URL_SERVER_STATS=http://localhost:8080/feed/dedicated-server-stats.xml
